[gd_scene load_steps=34 format=2]

[ext_resource path="res://theme/pressed.tres" type="StyleBox" id=1]
[ext_resource path="res://font_/MusticaPro-SemiBold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://theme/hover.tres" type="StyleBox" id=3]
[ext_resource path="res://theme/normal.tres" type="StyleBox" id=4]
[ext_resource path="res://theme/focus.tres" type="StyleBox" id=5]
[ext_resource path="res://theme/disable.tres" type="StyleBox" id=6]
[ext_resource path="res://theme/panel_background1.tres" type="StyleBox" id=7]
[ext_resource path="res://theme/panel_background2.tres" type="StyleBox" id=8]
[ext_resource path="res://theme/panel_background3.tres" type="StyleBox" id=9]
[ext_resource path="res://script/timer.gd" type="Script" id=10]
[ext_resource path="res://theme/syst_theme.tres" type="Theme" id=11]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.0352941, 0.423529, 1 )

[sub_resource type="DynamicFont" id=70]
size = 33
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=71]
size = 43
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=72]

[sub_resource type="StyleBoxEmpty" id=73]

[sub_resource type="StyleBoxEmpty" id=74]

[sub_resource type="StyleBoxEmpty" id=75]

[sub_resource type="StyleBoxEmpty" id=76]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.223529, 0.0431373, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.12549, 0, 0.247059, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.172549, 0, 0.337255, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.317647, 0.0431373, 0.576471, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.152941, 0.0156863, 0.286275, 1 )

[sub_resource type="DynamicFont" id=19]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.356863, 0, 0.619608, 1 )

[sub_resource type="DynamicFont" id=21]
size = 28
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.517647, 0, 1, 1 )

[sub_resource type="DynamicFont" id=69]
size = 18
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=65]
size = 45
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=66]
bg_color = Color( 0.160784, 0.00784314, 0.247059, 1 )

[sub_resource type="DynamicFont" id=68]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[node name="Timer_Popup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 64.0
margin_right = -63.0
margin_bottom = -68.0
rect_min_size = Vector2( 208, 216 )
script = ExtResource( 10 )

[node name="MainWindow" type="Panel" parent="."]
anchor_top = -0.017
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 12.971
margin_right = 1.0
rect_min_size = Vector2( 216, 216 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 9 )

[node name="tittleBar" type="Panel" parent="MainWindow"]
anchor_right = 1.0
margin_bottom = 33.443
rect_min_size = Vector2( 200, 33.443 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 2 )

[node name="Tittle" type="Label" parent="MainWindow/tittleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0
margin_bottom = 4.557
rect_min_size = Vector2( 176, 32 )
custom_fonts/font = SubResource( 70 )
text = "GnuChan Timer Beta 000000.1"
align = 1
valign = 1

[node name="close" type="Button" parent="MainWindow/tittleBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -13.0
margin_right = -6.0
margin_bottom = 8.557
rect_min_size = Vector2( 22.664, 33.255 )
input_pass_on_modal_close_click = false
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 71 )
custom_styles/hover = SubResource( 72 )
custom_styles/pressed = SubResource( 73 )
custom_styles/focus = SubResource( 74 )
custom_styles/disabled = SubResource( 75 )
custom_styles/normal = SubResource( 76 )
text = "X"

[node name="bottomBar" type="Panel" parent="MainWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 53.0
margin_right = -9.0
margin_bottom = -0.085022
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 7 )

[node name="timerMinute" type="Panel" parent="MainWindow/bottomBar"]
margin_left = 15.0
margin_top = 14.0
margin_right = 511.0
margin_bottom = 715.0
custom_styles/panel = SubResource( 11 )

[node name="timerPanel" type="Panel" parent="MainWindow/bottomBar/timerMinute"]
margin_left = 8.0
margin_right = 488.0
margin_bottom = 192.0
custom_styles/panel = SubResource( 12 )

[node name="MenuPanel" type="Panel" parent="MainWindow/bottomBar/timerMinute/timerPanel"]
margin_top = 192.0
margin_right = 480.0
margin_bottom = 264.0
custom_styles/panel = SubResource( 13 )

[node name="timerPanel2" type="Panel" parent="MainWindow/bottomBar/timerMinute/timerPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 472.0
margin_bottom = 253.0
custom_styles/panel = ExtResource( 8 )

[node name="LapsPanel" type="Panel" parent="MainWindow/bottomBar/timerMinute"]
margin_left = 8.0
margin_top = 264.0
margin_right = 488.0
margin_bottom = 701.0
custom_styles/panel = SubResource( 14 )

[node name="LapsPanel2" type="Panel" parent="MainWindow/bottomBar/timerMinute/LapsPanel"]
margin_left = 8.0
margin_top = 85.0
margin_right = 464.0
margin_bottom = 437.0
custom_styles/panel = SubResource( 15 )

[node name="LapsText" type="TextEdit" parent="MainWindow/bottomBar/timerMinute/LapsPanel/LapsPanel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 56.0
margin_right = -8.0
theme = ExtResource( 11 )
custom_colors/line_number_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/number_color = Color( 0.431373, 0.0431373, 0.745098, 1 )
custom_colors/font_color_readonly = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/read_only = ExtResource( 4 )
readonly = true
show_line_numbers = true
bookmark_gutter = true

[node name="timerLabel" type="Label" parent="MainWindow/bottomBar/timerMinute"]
margin_left = 24.0
margin_top = 16.0
margin_right = 472.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 18 )
align = 1
valign = 1

[node name="Menu" type="Panel" parent="MainWindow/bottomBar/timerMinute"]
margin_left = 24.0
margin_top = 280.0
margin_right = 472.0
margin_bottom = 336.0
custom_styles/panel = SubResource( 20 )

[node name="start" type="Button" parent="MainWindow/bottomBar/timerMinute/Menu"]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_focus = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_hover = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_pressed = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Start"

[node name="stop" type="Button" parent="MainWindow/bottomBar/timerMinute/Menu"]
margin_left = 104.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_focus = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_hover = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_pressed = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Stop"

[node name="reset" type="Button" parent="MainWindow/bottomBar/timerMinute/Menu"]
margin_left = 200.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_focus = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_hover = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_pressed = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Reset"

[node name="addLaps" type="Button" parent="MainWindow/bottomBar/timerMinute/Menu"]
margin_left = 304.0
margin_top = 8.0
margin_right = 440.0
margin_bottom = 48.0
custom_colors/font_color_disabled = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_focus = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_hover = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_pressed = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "Add Laps"

[node name="sep5" type="Panel" parent="MainWindow/bottomBar/timerMinute/Menu"]
margin_right = 8.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 22 )

[node name="sep4" type="Panel" parent="MainWindow/bottomBar/timerMinute/Menu"]
margin_left = 88.0
margin_right = 104.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 22 )

[node name="sep3" type="Panel" parent="MainWindow/bottomBar/timerMinute/Menu"]
margin_left = 184.0
margin_right = 200.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 22 )

[node name="sep2" type="Panel" parent="MainWindow/bottomBar/timerMinute/Menu"]
margin_left = 288.0
margin_right = 304.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 22 )

[node name="sep1" type="Panel" parent="MainWindow/bottomBar/timerMinute/Menu"]
margin_left = 440.0
margin_right = 448.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 22 )

[node name="timerStart" type="Panel" parent="MainWindow/bottomBar/timerMinute/Menu"]
margin_left = 56.0
margin_top = 77.085
margin_right = 392.0
margin_bottom = 117.085
custom_styles/panel = ExtResource( 8 )

[node name="StartLabel" type="Label" parent="MainWindow/bottomBar/timerMinute/Menu/timerStart"]
margin_left = 8.0
margin_top = 8.0
margin_right = 328.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 69 )
text = "test"
valign = 1

[node name="exktra_panel" type="Panel" parent="MainWindow/bottomBar"]
margin_left = 535.0
margin_top = 14.0
margin_right = 1128.0
margin_bottom = 683.0
rect_pivot_offset = Vector2( -528, 349.085 )

[node name="menu" type="Panel" parent="MainWindow/bottomBar/exktra_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 7 )

[node name="bg" type="Panel" parent="MainWindow/bottomBar/exktra_panel/menu"]
margin_left = 8.0
margin_top = -2.91501
margin_right = 584.0
margin_bottom = 101.085
custom_styles/panel = ExtResource( 8 )

[node name="clear" type="Button" parent="MainWindow/bottomBar/exktra_panel/menu/bg"]
margin_left = 16.0
margin_top = 16.085
margin_right = 136.0
margin_bottom = 88.085
custom_colors/font_color_disabled = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_focus = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_hover = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_pressed = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 65 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "clear"

[node name="save" type="Button" parent="MainWindow/bottomBar/exktra_panel/menu/bg"]
visible = false
margin_left = 144.0
margin_top = 16.085
margin_right = 264.0
margin_bottom = 88.085
custom_colors/font_color_disabled = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_focus = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_hover = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_pressed = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 65 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "save"

[node name="saveas" type="Button" parent="MainWindow/bottomBar/exktra_panel/menu/bg"]
margin_left = 400.0
margin_top = 16.085
margin_right = 562.0
margin_bottom = 88.085
custom_colors/font_color_disabled = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_focus = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_hover = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_pressed = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 65 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "save As"

[node name="open" type="Button" parent="MainWindow/bottomBar/exktra_panel/menu/bg"]
margin_left = 272.0
margin_top = 16.085
margin_right = 392.0
margin_bottom = 88.085
custom_colors/font_color_disabled = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_focus = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_hover = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_colors/font_color_pressed = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 65 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "open"

[node name="HistoryH" type="Panel" parent="MainWindow/bottomBar/exktra_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 109.0
margin_right = -9.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 66 )

[node name="clNote" type="TextEdit" parent="MainWindow/bottomBar/exktra_panel/HistoryH"]
margin_left = 8.0
margin_top = 8.0
margin_right = 568.0
margin_bottom = 584.0
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 68 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_styles/completion = ExtResource( 6 )
text = "1: Second: 10 | Minute: 05"
bookmark_gutter = true
breakpoint_gutter = true
caret_blink = true

[node name="fileManager" type="Control" parent="MainWindow/bottomBar"]
margin_left = 15.0
margin_top = 19.0
margin_right = 519.0
margin_bottom = 267.0

[node name="OpenFile_timer" type="FileDialog" parent="MainWindow/bottomBar/fileManager"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.0
margin_top = -296.0
margin_right = 252.0
margin_bottom = 296.0
rect_min_size = Vector2( 150, 52.5 )
theme = ExtResource( 11 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/home"
current_path = "/home/"

[node name="saveAsFile_timer" type="FileDialog" parent="MainWindow/bottomBar/fileManager"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.0
margin_top = -296.0
margin_right = 252.0
margin_bottom = 296.0
rect_min_size = Vector2( 150, 52.5 )
theme = ExtResource( 11 )
access = 2
current_dir = "/home"
current_path = "/home/"

[connection signal="pressed" from="MainWindow/tittleBar/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/timerMinute/Menu/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/timerMinute/Menu/stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/timerMinute/Menu/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/timerMinute/Menu/addLaps" to="." method="_on_addLaps_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/exktra_panel/menu/bg/saveas" to="." method="_on_saveas_pressed"]
[connection signal="pressed" from="MainWindow/bottomBar/exktra_panel/menu/bg/open" to="." method="_on_open_pressed"]
[connection signal="file_selected" from="MainWindow/bottomBar/fileManager/OpenFile_timer" to="." method="_on_OpenFile_timer_file_selected"]
[connection signal="file_selected" from="MainWindow/bottomBar/fileManager/saveAsFile_timer" to="." method="_on_saveAsFile_timer_file_selected"]
